fix: word-break in transaction table

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -390,3 +390,7 @@ thead th {
 .v-spinner {
   @apply .flex .items-center .justify-center
 }
+
+.word-break-all {
+  word-break: break-all;
+}
